--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,6 +48,9 @@
             <li>
               <a class="page-scroll" href="#contact"><%= t('contact') %></a>
             </li>
+            <% if I18n.locale != :en %><li><%= link_to "English", locale: :en %></li><% end %>
+            <% if I18n.locale != :de %><li><%= link_to "Deutch", locale: :de %></li><% end %>
+            <% if I18n.locale != :hu %><li><%= link_to "Magyar", locale: :hu %></li><% end %>
           </ul>
         </div>
         <!-- /.navbar-collapse -->
